# stroll

./: .ghci  .gitignore  CHANGES.md  LICENSE  README.md  stack.yaml  stroll.cabal
.github/workflows/: ci.yml
example/linux/clean/: clean
example/windows/clean/: clean.bat
example/windows/src/: HelloWorld.hs  compile.hs  main.c
example/windows/src/lib/: lib.c  lib.h
lib/Development/: Stroll.hs
lib/Development/Stroll/: Hash.hs  Trace.hs
papers/ifl-2021/: main.tex  refs.bib
src/: Main.hs
src/Development/: Stroll.hs
src/Development/Stroll/: Base.hs  Hash.hs  Script.hs  Trace.hs
