name:          stroll
version:       0.0.1
synopsis:      Stroll: a zero configuration build system
license:       MIT
license-file:  LICENSE
author:        Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
maintainer:    Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
copyright:     Andrey Mokhov, 2019-2021
homepage:      https://github.com/snowleopard/stroll
bug-reports:   https://github.com/snowleopard/stroll/issues
category:      Algorithms, Development
build-type:    Simple
cabal-version: 1.18
tested-with:   GHC==8.10
description:   Stroll is an experiment in developing a /zero configuration/
               build system that does not require the user to specify any
               dependencies between individual build tasks.

extra-doc-files:
    CHANGES.md
    README.md

source-repository head
    type:     git
    location: https://github.com/snowleopard/stroll.git

library
    hs-source-dirs:     src
    exposed-modules:    Development.Stroll
                        Development.Stroll.Hash
                        Development.Stroll.Script
                        Development.Stroll.Trace
    build-depends:      algebraic-graphs     >= 0.5     && < 0.6,
                        base                 >= 4.7     && < 5,
                        bytestring           >= 0.9.2.1 && < 0.11,
                        containers           >= 0.5.7.1 && < 7,
                        cryptonite           >= 0.23    && < 1.0,
                        directory            >= 1.2.2.0 && < 1.4,
                        filepath             >= 1.4     && < 1.5,
                        memory               >= 0.15    && < 0.16,
                        selective            >= 0.4     && < 0.5,
                        shake                >= 0.19    && < 0.20,
                        text                 >= 0.11.1  && < 1.3,
                        unordered-containers >= 0.1.3.0 && < 0.3,
                        yaml                 >= 0.11    && < 0.12
    default-language:   Haskell2010
    default-extensions: LambdaCase,
                        ScopedTypeVariables,
                        TupleSections
    ghc-options:        -Wall
                        -fno-warn-name-shadowing
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wredundant-constraints

executable stroll
    default-language:   Haskell2010
    default-extensions: LambdaCase,
                        ScopedTypeVariables,
                        TupleSections
    hs-source-dirs:     app
    main-is:            Main.hs
    build-depends:      base                 >= 4.7     && < 5,
                        directory            >= 1.2.2.0 && < 1.4,
                        stroll
